fix input on ios

--- a/public_html/static/css/src/forms/_input.scss
+++ b/public_html/static/css/src/forms/_input.scss
@@ -10,6 +10,8 @@ $inputBorder: 1px solid rgba(0,0,0,0.1);
 	color: rgba(0,0,0,0.9);
 	width: 100%;
 	border-radius: 0.25rem;
+	background-clip: padding-box;
+	// box-shadow: none !important;
 
 	@include flexbox;
 	@include flex-wrap(wrap);
